--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-scripts": "1.1.1",
+    "react-tabs": "^2.2.1",
     "styled-components": "^3.2.5"
   },
   "scripts": {
